--- a/ui/package.json
+++ b/ui/package.json
@@ -24,17 +24,17 @@
   "private": true,
   "dependencies": {
     "@angular-material-components/datetime-picker": "^6.0.3",
-    "@angular/animations": "~13.4.0",
+    "@angular/animations": "^14.3.0",
     "@angular/cdk": "^12.1.2",
-    "@angular/common": "~13.4.0",
-    "@angular/compiler": "~13.4.0",
-    "@angular/core": "~13.4.0",
-    "@angular/forms": "^13.4.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
     "@angular/material": "^12.1.2",
     "@angular/material-moment-adapter": "^13.3.4",
-    "@angular/platform-browser": "~13.4.0",
-    "@angular/platform-browser-dynamic": "~13.4.0",
-    "@angular/router": "~13.4.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ngrx/effects": "^12.2.0",
@@ -67,8 +67,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.2",
-    "@angular/cli": "^13.3.11",
-    "@angular/compiler-cli": "~13.4.0",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.14.6",
