Sms appoinment RCH

--- a/ui/proxy-config.example.json
+++ b/ui/proxy-config.example.json
@@ -1,6 +1,6 @@
 {
   "/": {
-    "target": "https://icare.dhis2.udsm.ac.tz",
+    "target": "http://localhost",
     "secure": "false",
     "auth": "admin:Admin123",
     "changeOrigin": "true"
