--- a/ui/package.json
+++ b/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node --max-old-space-size=4096 ./node_modules/@angular/cli/bin/ng serve",
     "build": "ng build",
     "build:prod": "ng build --aot --configuration production",
     "test": "ng test",
