--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "NODE_OPTIONS=--max_old_space_size=8192 ng serve",
-    "build": "NODE_OPTIONS=--max_old_space_size=8192 ng build",
+    "start": "cross-env NODE_OPTIONS=--max_old_space_size=8192 ng serve",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=8192 ng build",
     "build:prod": "ng build --aot --configuration production",
     "test": "ng test",
     "test:headless": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
@@ -69,7 +69,7 @@
     "quick-pivot": "^2.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
-    "xlsx": "^0.17.2",
+    "xlsx": "^0.17.5",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
