--- a/ui/package.json
+++ b/ui/package.json
@@ -102,7 +102,8 @@
     "swagger-typescript-api": "^9.2.0",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~5.2.0"
+    "typescript": "~5.2.0",
+    "webpack": "^5.97.1"
   },
   "config": {
     "commitizen": {
