ACCEPT AND HANDLE CURRENT PAGE

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -80,18 +80,18 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "proxyConfig": "proxy-config.json",
-            "buildTarget": "icare-ui:build"
+            "browserTarget": "icare-ui:build"
           },
           "configurations": {
             "production": {
-              "buildTarget": "icare-ui:build:production"
+              "browserTarget": "icare-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "icare-ui:build"
+            "browserTarget": "icare-ui:build"
           }
         },
         "test": {
