Successfully added a NOTIFY DOCTOR button and styled it with appropriate bell icon in the file table.component.html as required in the issue udsm-dhis2-lab#175 ,KIVUYO, Jacqueline M 2022-04-04596

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -12,6 +12,8 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "es2020",
+    "typeRoots": ["node_modules/@types"],
+    "skipLibCheck": true,
     "paths": {
       "tslib" : ["./node_modules/tslib/tslib.d.ts"]
     },
