--- a/ui/package.json
+++ b/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "NODE_OPTIONS=--max_old_space_size=8192 ng serve",
+    "start": "set NODE_OPTIONS=--max_old_space_size=8192 && ng serve --proxy-config proxy-config.json",
     "build": "NODE_OPTIONS=--max_old_space_size=8192 ng build",
     "build:prod": "ng build --aot --configuration production",
     "test": "ng test",
@@ -78,7 +78,7 @@
     "@angular/compiler-cli": "^17.3.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.14.6",
+    "@types/node": "^14.18.63",
     "ckeditor5": "^41.3.1",
     "codelyzer": "^6.0.0",
     "commitizen": "^4.3.0",
